tests/snapshots/examples_fixtures/Modules__MathConstants.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/MathConstants.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Modules.MathConstants` doesn't match file path `examples/Modules/MathConstants.flx`.

  --> examples/Modules/MathConstants.flx:4:1
  |
4 | module Modules.MathConstants {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
